--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.5.4",
-    "next": "14.2.11",
+    "next": "^14.2.10",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1"
